# arrowc

./: Cargo.toml
.github/workflows/: ci.yml
codegen/: Cargo.toml
codegen/src/: lib.rs
codegen/src/rust/: builder_gen.rs  companion_gen.rs  mod.rs  reader_gen.rs  schema_gen.rs  type_mapping.rs
compiler/: Cargo.toml
compiler/src/: lib.rs  main.rs
integration-tests/: Cargo.toml  Dockerfile  docker-compose.yml
integration-tests/tests/: duckdb_roundtrip.rs
schema/: Cargo.toml
schema/src/: arrow_type.rs  input.rs  lib.rs  schema_def.rs  validate.rs
testdata/: ecommerce.yaml  orders.yaml  user_events.yaml
